# lc3-toolchain

./: Cargo.toml  README  README.md  lc3.pest
.github/workflows/: release.yaml  release_fmt.yaml  release_lint.yaml  test.yml
src/: bin_utils.rs  error.rs  fmt.rs  fmt_ast.rs  formatter.rs  lib.rs  raw_ast.rs  test_utils.rs
src/ast/: mod.rs  parse.rs  processed_ast.rs  raw_ast.rs
src/fmt/: formatter.rs  mod.rs
src/lint/: lint.rs  linter.rs  mod.rs
src/test/: all.asm  lc3-format.toml
test/: test_fmt.rs  test_lint.rs  test_utils.rs
test/data/expected/fmt/: all.asm  directive_label_wrap.asm  flexible_comment_indent.asm  labels.asm  minimal_directive.asm  minimal_instruction.asm  no_colon_labels.asm  normal.asm  single_comment.asm
test/data/expected/lint/: all.asm
test/data/source/fmt/: all.asm  flexible_comment_indent.asm  minimal_directive.asm  minimal_instruction.asm  no_colon_labels.asm  normal.asm  single_comment.asm
