[package]
name = "lc3-toolchain"
version = "0.2.0"
edition = "2024"
description = "Toolchain for LC-3 Assembly Code, designed for ECE109 Spring 2025"
authors = ["Finn Sheng@NCState Class of 2028"]
repository = "https://github.com/robcholz/lc3-toolchain"
license = "GPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["cli", "tool"]

[dependencies]
clap = { version = "4.5.32", features = ["cargo", "color"] } # cli
codespan-reporting = "0.11.1" # report errors
similar = { version = "2.7.0", features = ["inline"] } # compare the differences
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20" # parallelize
pest = "2.7.15"
pest_derive = "2.7.15"
getset = "0.1.5"
either = "1.15.0"
anyhow = "1.0.97"
console = "0.15.11"


[[bin]]
name = "lc3fmt"
path = "src/bin/fmt.rs"

[[test]]
name = "test_fmt"
path = "test/test_fmt.rs"
